# nano

./: Cargo.toml
.github/workflows/: rust-clippy.yml
crates/photon/: Cargo.toml
crates/photon/src/: canvas.rs  color.rs  error.rs  lib.rs
crates/photon/src/renderers/: imgui.rs  mod.rs  scaling.rs  scaling.wgsl
examples/: entities.rs  module.rs  resources.rs  simple.rs  window.rs
examples/with_photon/: Cargo.toml
examples/with_photon/src/: main.rs
src/: archetype.rs  component.rs  deps.rs  engine.rs  entity.rs  error.rs  event.rs  host.rs  input.rs  lib.rs  prototype.rs  query.rs  ressource.rs  runtime.rs  system.rs  window.rs  world.rs
src/platform/: mod.rs  window.rs
src/resources/: mod.rs
src/systems/: executor.rs  mod.rs
src/world/: archetypes.rs  component.rs  mod.rs  prototype.rs  query.rs
