[package]
name = "nano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
rayon = { version = "1.5.1", optional = true }

[dev-dependencies]
seq-macro = "0.3.2"