[package]
name = "nano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
thiserror = "1.0.30"
generational-arena = "0.2"

[workspace]
members = [
    ".",

    "crates/photon",

    "examples/with_photon"
]