[package]
name = "photon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = ["dep:serde"]
scaling = []
imgui = ["dep:imgui-wgpu", "dep:imgui"]
default = ["scaling", "imgui"]

[dependencies]
wgpu = "0.15"
nano = { path = "../../" }
pollster = "0.3.0"
thiserror = "1.0.30"
image = "0.24.6"

serde = { version = "1.0.130", features = ["derive"], optional = true }

imgui-wgpu = { version = "0.22.0", optional = true }
imgui = { version = "0.10.0", optional = true }